<resources>
    <string name="app_name">GuanceDemo</string>
    <string name="str_custom_track">主动埋点（不返回上传结果）</string>
    <string name="str_custom_track_result">主动埋点（异步返回上传结果）</string>
    <string name="str_custom_track_multi_result">主动埋点多条数据（异步返回上传结果）</string>
    <string name="str_upload_flow_chart">上传流程图</string>
    <string name="password">密码</string>
    <string name="email">Email</string>
    <string name="login">登录</string>
    <string name="username">用户名</string>
    <string name="url_check">地址检测</string>
    <string name="app_id">AppId</string>
    <string name="demo_api_address">Demo API Address</string>
    <string name="datakit_address">Datakit Address</string>
    <string name="edit_setting">编辑 Demo 配置</string>
    <string name="main_index_mine">我的</string>
    <string name="main_index_home">首页</string>
    <string name="setting_save">保存</string>
    <string name="setting_import_from_clipboard">剪切板导入</string>
    <string name="tip">提示</string>
    <string name="setting_tip_restart">设置完成后需要重启启动应用</string>
    <string name="setting_import_success">配置导入成功</string>
    <string name="setting_import_fail">配置解析失败</string>
    <string name="setting_configure_not_found">未发现配置</string>
    <string name="setting_tip_connect_success">地址连接正常</string>
    <string name="setting_log_out">退出登录</string>
    <string name="setting_version">版本号</string>
    <string name="webview_refresh">刷新</string>
</resources>
