<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="27dp"
        android:hint="@string/app_id">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_app_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:hint="@string/datakit_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_datakit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="27dp"
        android:hint="@string/demo_api_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/setting_demo_api"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="15"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/setting_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_check" />

</LinearLayout>