<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingStart="27dp"
        android:paddingEnd="27dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/login_logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="27dp"
            android:hint="@string/username"
            app:startIconDrawable="@drawable/ic_baseline_person_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:hint="@string/password"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent"
            app:startIconDrawable="@drawable/ic_baseline_lock_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:padding="13dp"
            android:text="@string/login"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/login_setting_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="4dp"
            android:text="@string/edit_setting"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>


</LinearLayout>